added friendship and friendrequest