@@ -8,13 +8,16 @@ import org.example.springtraveljournal.models.entities.User;
 import org.example.springtraveljournal.models.enums.JournalVisibility;
 import org.example.springtraveljournal.repositories.JournalRepository;
 import org.example.springtraveljournal.repositories.UserRepository;
+import org.example.springtraveljournal.services.FriendRequestService;
 import org.example.springtraveljournal.services.JournalService;
 import org.example.springtraveljournal.services.UserService;
 import org.example.springtraveljournal.util.SecurityUtil;
+import org.example.springtraveljournal.util.exceptions.ForbiddenException;
 import org.example.springtraveljournal.util.exceptions.ResourceNotFoundException;
 import org.example.springtraveljournal.util.mappers.JournalMapper;
 import org.example.springtraveljournal.util.mappers.UserMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -24,11 +27,12 @@ public class JournalServiceImpl implements JournalService {
 
     private final JournalRepository journalRepository;
     private final UserRepository userRepository;
+    private final FriendRequestService friendRequestService;
 
-
-    public JournalServiceImpl(JournalRepository journalRepository, UserRepository userRepository, UserService userService, UserMapper userMapper) {
+    public JournalServiceImpl(JournalRepository journalRepository, UserRepository userRepository, UserService userService, UserMapper userMapper, FriendRequestService friendRequestService) {
         this.journalRepository = journalRepository;
         this.userRepository = userRepository;
+        this.friendRequestService = friendRequestService;
     }
 
     @Override
@@ -56,25 +60,59 @@ public class JournalServiceImpl implements JournalService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<JournalResponseDto> getJournalsByVisibility(JournalVisibility visibility) {
+
         if (visibility == null) {
             throw new IllegalArgumentException("No visibility given");
         }
-        List<Journal> journals = journalRepository.findByVisibility(visibility);
-        return journals.stream().map(JournalMapper::journalToJournalResponseDto).collect(Collectors.toList());
+
+        Long userId = SecurityUtil.getCurrentUserId();
+        List<Long> friendIds = friendRequestService.getFriendIds(userId);
+
+        List<Journal> journals = journalRepository.findByVisibility(visibility)
+                .stream()
+                .filter(journal -> switch (visibility) {
+
+                    case PUBLIC -> true;
+
+                    case FRIENDS -> friendIds.contains(journal.getOwner().getId());
+
+                    case PRIVATE -> journal.getOwner().getId().equals(userId);
+                })
+                .toList();
+
+        return journals.stream()
+                .map(JournalMapper::journalToJournalResponseDto)
+                .toList();
     }
 
+
     @Override
+    @Transactional(readOnly = true)
     public List<JournalResponseDto> searchJournalsWithQuery(String query) {
+
+        if (query == null || query.isBlank()) {
+            return List.of();
+        }
+
+        String normalizedQuery = query.trim();
         Long userId = SecurityUtil.getCurrentUserId();
-        List<Journal> journals = journalRepository.findByTitleContainingIgnoreCase(query)
+        List<Long> friendIds = friendRequestService.getFriendIds(userId);
+
+        List<Journal> journals = journalRepository
+                .findByTitleContainingIgnoreCase(normalizedQuery)
                 .stream()
                 .filter(journal ->
-                        journal.getOwner().getId().equals(userId)
-                                || (journal.getVisibility() == JournalVisibility.PUBLIC)
-                                || (journal.getVisibility()) == JournalVisibility.FRIENDS)
+                        journal.getVisibility() == JournalVisibility.PUBLIC
+                                || (journal.getVisibility() == JournalVisibility.FRIENDS
+                                && friendIds.contains(journal.getOwner().getId()))
+                )
                 .toList();
-        return journals.stream().map(JournalMapper::journalToJournalResponseDto).collect(Collectors.toList());
+
+        return journals.stream()
+                .map(JournalMapper::journalToJournalResponseDto)
+                .toList();
     }
 
     @Override
@@ -85,8 +123,7 @@ public class JournalServiceImpl implements JournalService {
 
     @Override
     public JournalResponseDto updateJournalAll(Long id, JournalRequestCreateDto updatedJournal) {
-        Journal existingJournal = journalRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal not found"));
+        Journal existingJournal = getOwnedJournalOrThrow(id);
 
         existingJournal.setTitle(updatedJournal.getTitle());
         existingJournal.setDescription(updatedJournal.getDescription());
@@ -99,8 +136,7 @@ public class JournalServiceImpl implements JournalService {
     }
 
     public JournalResponseDto updateJournalPartial(Long id, JournalRequestUpdateDto updatedJournal) {
-        Journal existingJournal = journalRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal not found"));
+        Journal existingJournal = getOwnedJournalOrThrow(id);
 
         if (updatedJournal.getTitle() != null) {
             existingJournal.setTitle(updatedJournal.getTitle());
@@ -122,8 +158,21 @@ public class JournalServiceImpl implements JournalService {
     }
 
     public void deleteJournal(Long id) {
-        Journal existingJournal = journalRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Journal not found"));
+        Journal existingJournal = getOwnedJournalOrThrow(id);
+
         journalRepository.delete(existingJournal);
+    }
+
+    private Journal getOwnedJournalOrThrow(Long journalId) {
+
+        Long userId = SecurityUtil.getCurrentUserId();
+
+        Journal journal = journalRepository.findById(journalId)
+                .orElseThrow(() -> new ResourceNotFoundException("Journal not found"));
+
+        if (!journal.getOwner().getId().equals(userId)) {
+            throw new ForbiddenException("You are not allowed to modify this journal");
+        }
+        return journal;
     }
 }
